--- a/City Immigration and Temperatures.ipynb
+++ b/City Immigration and Temperatures.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "3096313"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "2   486  2016-04-01       SFR         CA   48      M          2      1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        " ('count', 'int')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "8599212"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "2  Denmark   57.05N    10.33E  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,15 +668,19 @@
     "                     .withColumn(\"AverageTemperature\",col(\"AverageTemperature\").cast(\"float\"))\\\n",
     "                     .na.drop(subset=[\"i94port\"])\n",
     "\n",
+    "\n",
     "df_temp = df_temp.filter(df_temp['year'] == 2013)\\\n",
-    "                 .select(col(\"i94port\").alias(\"city_code\"),\n",
+    "                 .groupBy('i94port','city').agg({'AverageTemperature':'avg'})\n",
+    "\n",
+    "\n",
+    "df_temp = df_temp.select(col(\"i94port\").alias(\"city_code\"),\n",
     "                         col(\"city\").alias(\"city_name\"),\n",
-    "                         col(\"AverageTemperature\").alias(\"2013_average_temperature\")).drop_duplicates()"
+    "                         col(\"avg(AverageTemperature)\").alias(\"2013_average_temperature\")).drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -708,21 +712,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>Denver</td>\n",
-       "      <td>21.813</td>\n",
+       "      <td>SYR</td>\n",
+       "      <td>Syracuse</td>\n",
+       "      <td>10.180111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>LVG</td>\n",
-       "      <td>Las Vegas</td>\n",
-       "      <td>31.698</td>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>12.163889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>SYR</td>\n",
-       "      <td>Syracuse</td>\n",
-       "      <td>19.545</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>Milwaukee</td>\n",
+       "      <td>11.586889</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -730,12 +734,12 @@
       ],
       "text/plain": [
        "  city_code  city_name  2013_average_temperature\n",
-       "0       DEN     Denver                    21.813\n",
-       "1       LVG  Las Vegas                    31.698\n",
-       "2       SYR   Syracuse                    19.545"
+       "0       SYR   Syracuse                 10.180111\n",
+       "1       NYC   New York                 12.163889\n",
+       "2       MIL  Milwaukee                 11.586889"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -754,10 +758,10 @@
       "text/plain": [
        "[('city_code', 'string'),\n",
        " ('city_name', 'string'),\n",
-       " ('2013_average_temperature', 'float')]"
+       " ('2013_average_temperature', 'double')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
