--- a/City Immigration and Temperatures.ipynb
+++ b/City Immigration and Temperatures.ipynb
@@ -61,7 +61,7 @@
     "### #1: Scope the Project and Gather Data\n",
     "\n",
     "#### Scope \n",
-    "The goal of this project is to pull data from two sources, and create fact and dimension tables to show immigration pattern and with factors of user demographics and destination temperature.\n",
+    "The goal of this project is to pull data from two sources, and create fact and dimension tables to show immigration pattern with factors of immigrant demographics, destination city temperature, and seasonality. \n",
     " \n",
     "\n",
     "#### Describe and Gather Data \n",
@@ -794,7 +794,6 @@
     "        B. city_name\n",
     "        C. 2013_average_temperature\n",
     "\n",
-    "\n",
     "##### Dimension Tables\n",
     "\n",
     "    df_immigrant\n",
@@ -813,7 +812,6 @@
     "        C. weekofyear\n",
     "        D. month\n",
     "        \n",
-    "\n",
     "##### Fact Table\n",
     "\n",
     "    df_immigration\n",
@@ -822,7 +820,6 @@
     "        C. date\n",
     "        D. count\n",
     "        \n",
-    "\n",
     "#### 3.2 Mapping Out Data Pipelines\n",
     "<b> Steps necessary to pipeline the data into the chosen data model </b>\n",
     "\n",
