--- a/City Immigration and Temperatures.ipynb
+++ b/City Immigration and Temperatures.ipynb
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "2       MIL  Milwaukee                 11.586889"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
        " ('2013_average_temperature', 'double')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "4  8589952282   31      F          1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -990,28 +990,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>NWH</td>\n",
-       "      <td>24.518999</td>\n",
+       "      <td>HAR</td>\n",
+       "      <td>12.329111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>LLB</td>\n",
-       "      <td>-3.213000</td>\n",
+       "      <td>LCB</td>\n",
+       "      <td>24.102222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>SNA</td>\n",
-       "      <td>27.726999</td>\n",
+       "      <td>KAN</td>\n",
+       "      <td>13.989667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>6.819000</td>\n",
+       "      <td>RCM</td>\n",
+       "      <td>15.955445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>LAN</td>\n",
-       "      <td>25.090000</td>\n",
+       "      <td>OTM</td>\n",
+       "      <td>23.564555</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1019,14 +1019,14 @@
       ],
       "text/plain": [
        "  city_code  2013_average_temperature\n",
-       "0       NWH                 24.518999\n",
-       "1       LLB                 -3.213000\n",
-       "2       SNA                 27.726999\n",
-       "3       DET                  6.819000\n",
-       "4       LAN                 25.090000"
+       "0       HAR                 12.329111\n",
+       "1       LCB                 24.102222\n",
+       "2       KAN                 13.989667\n",
+       "3       RCM                 15.955445\n",
+       "4       OTM                 23.564555"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "4  2016-04-05    3    14      4"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
        "4  108719       MIA  2016-04-02      1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
      "output_type": "stream",
      "text": [
       "data quality check passed!\n",
-      "all dimension table and fact table contain data\n",
+      "dimension tables and fact table contain records\n",
       "\n"
      ]
     }
@@ -1308,7 +1308,7 @@
     "def qc_records(df):\n",
     "    return df.count() != 0 \n",
     "\n",
-    "if quality_check(df_immigrant) & quality_check(df_city) & quality_check(df_time) &  quality_check(df_immigration):\n",
+    "if qc_records(df_immigrant) & qc_records(df_city) & qc_records(df_time) &  qc_records(df_immigration):\n",
     "    print(\"data quality check passed!\")\n",
     "    print(\"dimension tables and fact table contain records\")\n",
     "    print()\n",
@@ -1370,6 +1370,13 @@
     " * if the database needed to be accessed by 100+ people: <br>\n",
     "    We can consider hosting our solution in production scale data warehouse in the cloud, with larger capacity to serve more users, and workload management to ensure equitable usage of resources across users. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
